# hf_ft

./: README.md
cs/: .gitignore  README.md  pyproject.toml
cs/configs/: labels.yaml  train.yaml
cs/data/: README.md
cs/data/raw/: synthetic_cs_v1.csv
cs/docs/: api.md  baseline-plan.md  baseline-report.md  data-pipeline-report.md  dataset-report.md  error-analysis.md  evaluation-report.md  labeling-guide.md  model-lab.md  model-selection.md  phase-01.md  training-report.md
cs/scripts/: evaluate.py  predict.py  prepare_data.py  train_baseline.py  train_transformer.py
cs/src/cs_classifier/: __init__.py  api.py  data.py  inference.py  metrics.py  preprocess.py  training.py
cs/src/cs_classifier/static/: index.html  lab.css  lab.js
cs/tests/: test_api.py  test_data.py  test_label_mapping.py  test_metrics.py  test_preprocess.py  test_training.py
